# Osmium

./: .gitignore  .gitmodules  CMakeLists.txt  todo.md
nbody/: CMakeLists.txt
nbody/src/: NBodyApp.cpp  NBodyApp.h  Presets.cpp  Presets.h  TestApp.cpp  TestApp.h  UI.cpp  UI.h  main.cpp
nbody/src/components/: PathComponent.h  PhysicsComponent.h
nbody/src/math/: GLMHelpers.h  Physics.h  PhysicsTest.cpp
osmium/: CMakeLists.txt  osmium.cpp  osmium.h
osmium/app/: App.cpp  App.h  AppManager.cpp  AppManager.h  Settings.cpp  Settings.h
osmium/assets/: TextureStore.cpp  TextureStore.h
osmium/imgui/: imgui_impl_glfw_gl3.cpp
osmium/input/: Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h
osmium/render/: Shader.cpp  Shader.h
osmium/render/entity/: Entity.cpp  Entity.h  LogicalEntity.cpp  LogicalEntity.h
osmium/render/entity/components/: BaseComponent.cpp  BaseComponent.h  Camera.cpp  Camera.h  CameraOrthographic.cpp  CameraOrthographic.h  CameraPerspective.cpp  CameraPerspective.h  Mesh.h  MeshComponent.cpp  MeshComponent.h  PlayerControlFPV.cpp  PlayerControlFPV.h  PointLight.cpp  PointLight.h  Transform.h
osmium/render/entity/messages/: Message.cpp  Message.h
osmium/render/graphics/: Framebuffer.cpp  Framebuffer.h  GBuffer.cpp  GBuffer.h  Light.cpp  Light.h  PointLight.cpp  PointLight.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VAO.cpp  VAO.h
osmium/render/mesh/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  OBJLoader.cpp  OBJLoader.h
osmium/render/scene/: SceneManager.cpp  SceneManager.h
osmium/util/: GLMHelpers.h  Loader.cpp  Loader.h
sandbox/: CMakeLists.txt  TestApp.cpp  TestApp.h  main.cpp
